Use URI instead of URL so paths can be relative.